--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ bzip2=1.0.8=h1de35cc_0
 c-ares=1.26.0=h10d778d_0
 ca-certificates=2024.3.11=hecd8cb5_0
 cairo=1.16.0=h691a603_2
+click=8.1.7=py312hecd8cb5_0
 curl=8.5.0=h04015c4_0
 django=5.0.2=pyhd8ed1ab_0
 django-storages=1.14.3=pyhd8ed1ab_0
@@ -50,6 +51,7 @@ poppler-data=0.4.12=hd8ed1ab_0
 pysocks=1.7.1=py312hecd8cb5_0
 python=3.12.1=hd58486a_0
 python-dateutil=2.9.0post0=py312hecd8cb5_0
+python-dotenv=0.21.0=py312hecd8cb5_0
 readline=8.2=hca72f7f_0
 s3transfer=0.10.1=py312hecd8cb5_0
 setuptools=68.2.2=py312hecd8cb5_0
