--- a/compose.yaml
+++ b/compose.yaml
@@ -1,7 +1,8 @@
 services:
   web:
     build: .
-    command: bash -c "python manage.py makemigrations && python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
+    # command: bash -c "python manage.py makemigrations && python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
+    command: bash -c "python manage.py runserver 0.0.0.0:8000"
     container_name: ratemyresume_web_server
     volumes:
       - .:/ratemyresume
